tests/expectations/compiler/bugs/unknown_variable_fail.out
Error [ETYC0372005]: Unknown variable `caller`
    --> compiler-test:36:31
     |
  36 |                 finalize_init(caller);
     |                               ^^^^^^
Error [ETYC0372005]: Unknown variable `account`
    --> compiler-test:56:49
     |
  56 |     let owner_amount: u64 = Mapping::get_or_use(account, caller, 0u64);
     |                                                 ^^^^^^^
Error [ETYC0372005]: Unknown variable `account`
    --> compiler-test:58:18
     |
  58 |     Mapping::set(account, caller, owner_amount + admin_token_amt);
     |                  ^^^^^^^
